# mens-et-manus

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.lua
assets/: config.lua  gameMenu.lua  mainMenu.lua  menu.lua
assets/sampleMod/: mod.lua
assets/vanilla/: mod.lua
assets/vanilla/mainMenu/: mainMenu.lua  shader.frag
assets/vanilla/splash/: shader.frag  shader.vert
assets/vanilla/tiles/: _list.lua  grass.lua
assets/vanilla/tiles/shaders/: shader.frag  shader.vert
cfg/: config.lua  settings_default.lua
cmake/Modules/: FindSDL2_net.cmake  prepend.cmake
include/: Buffer.h  Cam.h  Config.h  Engine.h  Game.h  GameConfig.h  Logger.h  LuaBuffer.h  LuaFile.h  MainMenu.h  Map.h  Mod.h  Mouse.h  Routine.h  Save.h  Shader.h  Splash.h  Texture.h  Tile.h  Viewport.h  Window.h  exceptions.h  game_lua.h  geometry.h  global.h  lua_overlay.h  lua_utils.h  main_menu.h  map.h  mouse.h  nk_lua.h  point.h  util.h  windowState.h
include/auxiliary/: errors.h  exceptions.h  filesystem.h  game_lua.h  geometry.h  logger_implenent.h  lua_overlay.h  nk_lua.h  primitives.h  sdl_gl_overlay.h  util.h
include/client/: Shader.h
include/client/routines/: Game.h  MainMenu.h  Routine.h  RoutineFactory.h  Splash.h
include/engine/: Engine.h  LuaFile.h  Mod.h
include/lib/: glad.h  sol.hpp
include/lib/nuklear/: nuklear_common.h
include/lua_binders/: bind_lua.h  buffer_lua.h  game_lua.h  log_lua.h  modlist_lua.h  nk_lua.h
include/menus/: MainMenu.h
include/nuklear/: nuklear_common.h  nuklear_sdl_gl2.h
include/routines/: Game.h  MainMenu.h  Routine.h  Splash.h
include/server/: Map.h  Tile.h
lua_utils/: utils.lua
mods/vanilla/lua/: map.lua
src/: Cam.cpp  Config.cpp  Engine.cpp  Game.cpp  GameConfig.cpp  Logger.cpp  LuaFile.cpp  MainMenu.cpp  Map.cpp  Mod.cpp  Mouse.cpp  Routine.cpp  Shader.cpp  Splash.cpp  Texture.cpp  Tile.cpp  Viewport.cpp  Window.cpp  exceptions.cpp  game_lua.cpp  lua_overlay.cpp  main.cpp  main_menu.cpp  main_menu.h  map.cpp  map.h  mouse.cpp  nk_implement.cpp  nk_lua.cpp  nuklear_implementation.cpp  sdl_gl_overlay.cpp  util.cpp
src/auxiliary/: game_lua.cpp  lua_overlay.cpp  nk_lua.cpp  primitives.cpp  sdl_gl_overlay.cpp  util.cpp
src/client/: Cam.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/client/routines/: Game.cpp  MainMenu.cpp  RoutineFactory.cpp  Splash.cpp
src/engine/: Config.cpp  Engine.cpp  Logger.cpp  LuaFile.cpp  Mod.cpp
src/lib/: glad.c  nuklear.cpp
src/lua_binders/: buffer_lua.cpp  game_lua.cpp  log_lua.cpp  modlist_lua.cpp  nk_lua.cpp
src/menus/: MainMenu.cpp
src/routines/: Game.cpp  MainMenu.cpp  RoutineFactory.cpp  Splash.cpp
src/server/: Map.cpp  Tile.cpp
